# ur3_traj

./: .gitignore  package.xml  setup.cfg  setup.py
CSV/: ur3_data_2026_01_23_17_03_07.csv  ur3_data_2026_01_23_17_10_29.csv  ur3_data_2026_01_23_17_21_46.csv  ur3_ft_data.csv  ur3_ft_data_2025_12_19_12_14_05.csv
CSV/expérience 1/: meta.txt  ur3_data_2026_01_29_16_36_23.csv  ur3_data_2026_01_29_16_37_31.csv  ur3_data_2026_01_29_16_39_12.csv
CSV/expérience 1 : pas bcp de scratch, chaussure 1/: ur3_data_2026_01_29_16_33_08.csv
CSV/expérience 1 : success/: meta.txt  ur3_data_2026_01_29_16_31_25.csv  ur3_data_2026_01_29_16_32_25.csv  ur3_data_2026_01_29_16_34_38.csv  ur3_data_2026_01_29_16_35_27.csv  ur3_data_2026_01_29_16_38_38.csv  ur3_data_2026_01_29_16_40_27.csv
CSV/expérience 10/: ur3_data_2026_02_26_11_12_50.csv  ur3_data_2026_02_26_11_14_14.csv  ur3_data_2026_02_26_11_15_10.csv  ur3_data_2026_02_26_11_17_47.csv
CSV/expérience 10 : success/: meta.txt  ur3_data_2026_02_26_11_16_19.csv
CSV/expérience 11/: meta.txt  ur3_data_2026_02_26_13_55_07.csv
CSV/expérience 12/: ur3_data_2026_02_26_14_20_46.csv
CSV/expérience 12 : fail/: meta.txt  ur3_data_2026_02_26_14_22_52.csv
CSV/expérience 13/: meta.txt
CSV/expérience 13 : fail/: ur3_data_2026_02_26_14_48_16.csv
CSV/expérience 2 : success/: meta.txt  (+4 more)
config/: ur3_init.rviz  ur3_init2.rviz
launch/: data_base.launch.py  real_launch.launch.py  simu_launch.launch.py  test.launch.py
ur3_traj/: gripper.py  pose_robot.py  record_F.py  scene_object.py  ur3_moveit_action.py  visu_3D_point.py
(+63 files in other folders)
